test/spec_vectors/align64/ok/module_12.wat
(module (memory i64 0) (func (drop (f32.load align=4 (i64.const 0)))))